Update: githaub action ci file
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -6,9 +6,9 @@ on:
   push:
     tags:
       - "*"
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   ci-dotfiles:
