--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,8 @@ repos:
     rev: v8.26.0
     hooks:
       - id: gitleaks
+        args: ["--pre-commit", "--redact", "--staged", "--verbose"]
+
   # gem needs to be installed
   - repo: https://github.com/markdownlint/markdownlint
     rev: v0.12.0
