--- a/project/pre-commit-config.yaml
+++ b/project/pre-commit-config.yaml
@@ -16,6 +16,14 @@ repos:
       - id: check-symlinks
       - id: detect-private-key
 
+  - repo: https://github.com/jumanjihouse/pre-commit-hooks
+    rev: 3.0.0
+    hooks:
+      - id: shellcheck
+        args: [--severity, "error"]
+        exclude: "^.git"
+        files: "\\.sh$"
+
   # pip install detect-secrets
   # detect-secrets scan > .secrets.baseline
   - repo: https://github.com/Yelp/detect-secrets
