--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,4 +25,4 @@ repos:
     rev: v0.12.0
     hooks:
       - id: markdownlint
-        args: ["-r", "~MD007,~MD013"]
+        # args: ["-r", "~MD007,~MD013"]
