--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -43,6 +43,7 @@
     "yaml.maxItemsComputed": 7000,
     "editor.minimap.enabled": false,
     "workbench.editor.empty.hint": "hidden",
-    "workbench.colorTheme": "One Dark Pro Darker"
+    "workbench.colorTheme": "One Dark Pro Darker",
+    "http.proxy": "socks5://127.0.0.1:10808"
 
 }
