--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -4,7 +4,6 @@
     "editor.fontFamily": "Fira Code",
     "editor.fontLigatures": true,
     "terminal.integrated.fontFamily": "Fira Code",
-    "terminal.integrated.fontSize": 16,
     "editor.mouseWheelZoom": true,
     "debug.console.fontSize": 17,
     "scm.inputFontSize": 15,
@@ -44,6 +43,7 @@
     "editor.minimap.enabled": false,
     "workbench.editor.empty.hint": "hidden",
     "workbench.colorTheme": "One Dark Pro Darker",
-    "http.proxy": "socks5://127.0.0.1:10808"
+    "http.proxy": "socks5://127.0.0.1:10808",
+    "terminal.integrated.fontSize": 15
 
 }
