--- a/templates/.ssh/config
+++ b/templates/.ssh/config
@@ -1,11 +1,15 @@
-IdentityFile ${HOME}/.ssh/id_ed25519.pub
+Host *
+  ControlMaster auto
+  ControlPath ~/.ssh/cm-%r@%h:%p
+  ControlPersist 10m
+  IdentityFile ${HOME}/.ssh/<ssh-key>.pub
 
 Host github.com
   HostName ssh.github.com
   User git
   Port 443
 
-# ---- Qemu/KVM -----
+# ---- Qemu/KVM
 HOST Kvm-*
   User ali
   Port 22
@@ -17,20 +21,22 @@ Host Kvm-Rocky-9
 
 HOST vps-*
   User ali
-
-  # Use Proxy, install the connect-proxy package
-  ProxyCommand          connect-proxy -S 127.0.0.1:10808 %h %p
+  # --- Use Proxy, install connect-proxy
+  ProxyCommand          connect-proxy --socks-proxy-server 127.0.0.1:10808 %h %p
   ServerAliveInterval   10
   Port 2233
-
-  # Jump Server
-  # proxycommand ssh -W %h:%p -q JUMP_SERVER
-  # ProxyJump JUMP_SERVER
+  # --- Jump Server
+  # proxycommand ssh -W %h:%p -q BASTION_SERVER
+  # ProxyJump BASTION_SERVER
 
 Host vps-1
-  # HostName IP V6
+  # HostName IP_V6
   HostName 1.2.3.4
   Port 2200
 
 Host vps-2
   HostName 1.2.3.5
+
+# --- SSH Agent Forwarding
+Host bastion-server
+  ForwardAgent yes
