Update: identity_file in ssh_config
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/templates/.ssh/config
+++ b/templates/.ssh/config
@@ -2,7 +2,8 @@ Host *
   ControlMaster auto
   ControlPath ~/.ssh/cm-%r@%h:%p
   ControlPersist 10m
-  IdentityFile ${HOME}/.ssh/<ssh-key>.pub
+  # man 5 ssh_config
+  IdentityFile ${HOME}/.ssh/<ssh-key-priv-key>
 
 Host github.com
   HostName ssh.github.com
