Update: ssh_config
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/templates/.ssh/config
+++ b/templates/.ssh/config
@@ -1,26 +1,27 @@
-Host *
+Host github.com
+  HostName ssh.github.com
+  User git
+  Port 443
+
+Host vm-*
   ControlMaster auto
   ControlPath ~/.ssh/cm-%r@%h:%p
   ControlPersist 10m
   # man 5 ssh_config
   IdentityFile ${HOME}/.ssh/<ssh-key-priv-key>
 
-Host github.com
-  HostName ssh.github.com
-  User git
-  Port 443
 
-# ---- Qemu/KVM
-HOST Kvm-*
+# ---- Qemu/vm-kvm
+HOST vm-kvm-*
   User ali
   Port 22
 
-Host Kvm-Debian-11
+Host vm-kvm-debian-11
   HostName 192.168.122.234
-Host Kvm-Rocky-9
+Host vm-kvm-rocky-9
   HostName 192.168.122.213
 
-HOST vps-*
+HOST vm-vps-*
   User ali
   # --- Use Proxy, install connect-proxy
   ProxyCommand          connect-proxy --socks-proxy-server 127.0.0.1:10808 %h %p
@@ -30,14 +31,14 @@ HOST vps-*
   # proxycommand ssh -W %h:%p -q BASTION_SERVER
   # ProxyJump BASTION_SERVER
 
-Host vps-1
+Host vm-vps-1
   # HostName IP_V6
   HostName 1.2.3.4
   Port 2200
 
-Host vps-2
+Host vm-vps-2
   HostName 1.2.3.5
 
 # --- SSH Agent Forwarding
-Host bastion-server
+Host vm-bastion-server
   ForwardAgent yes
