--- a/.editorconfig
+++ b/.editorconfig
@@ -3,26 +3,37 @@ root = true
 
 [*]
 charset = utf-8
-indent_style = space
-tab_width = 2
-max_line_length = 100
 end_of_line = lf
+tab_width = 2
+indent_size = 2
+indent_style = space
+max_line_length = 100
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.go]
+indent_style = tab
+
+[*.mak]
+indent_style = tab
+
+[Makefile]
+indent_style = tab
+
+[*.py]
+indent_size = 4
+indent_style = space
+
+[*.{yaml,yml,yml.j2,yaml.j2}]
+indent_size = 2
+
+[{Dockerfile}]
+indent_size = 2
+
+[*.conf]
+indent_style = tab
 
 [*.md]
 max_line_length = off
+indent_size = 1
 trim_trailing_whitespace = false
-
-[*.py]
-indent_style = space
-end_of_line = lf
-insert_final_newline = true
-max_line_length = 100
-trim_trailing_whitespace = true
-indent_size = 4
-
-[*.yaml]
-indent_style = space
-indent_size = 2
-trim_trailing_whitespace = true
