Add: some custom and example of completions
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -60,5 +60,6 @@
         "editor.defaultFormatter": "redhat.vscode-yaml"
     },
     "workbench.secondarySideBar.defaultVisibility": "hidden",
+    "makefile.configureOnOpen": false,
 
 }
