Update: ssh/config
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/templates/.ssh/config
+++ b/templates/.ssh/config
@@ -28,8 +28,8 @@ HOST vm-vps-*
   ServerAliveInterval   10
   Port 2233
   # --- Jump Server
-  # proxycommand ssh -W %h:%p -q BASTION_SERVER
-  # ProxyJump BASTION_SERVER
+  # proxycommand ssh -W %h:%p -q vm-bastion-server
+  # ProxyJump vm-bastion-server
 
 Host vm-vps-1
   # HostName IP_V6
