--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -61,5 +61,6 @@
     },
     "workbench.secondarySideBar.defaultVisibility": "hidden",
     "makefile.configureOnOpen": false,
-
+    "gitlens.currentLine.enabled": false,
+    "gitlens.codeLens.enabled": false
 }
