Update: vimrc for vim-go plugin and code lens current line settings
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -61,6 +61,6 @@
     },
     "workbench.secondarySideBar.defaultVisibility": "hidden",
     "makefile.configureOnOpen": false,
-    "gitlens.currentLine.enabled": false,
+    "gitlens.currentLine.enabled": true,
     "gitlens.codeLens.enabled": false
 }
