update: bashrc, code settings, ssh-config template, ...
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -62,5 +62,6 @@
     "workbench.secondarySideBar.defaultVisibility": "hidden",
     "makefile.configureOnOpen": false,
     "gitlens.currentLine.enabled": true,
-    "gitlens.codeLens.enabled": false
+    "gitlens.codeLens.enabled": false,
+    "terminal.external.linuxExec": ""
 }
