--- a/templates/.ssh/config
+++ b/templates/.ssh/config
@@ -9,6 +9,7 @@ Host vm-*
   ControlPersist 10m
   # man 5 ssh_config
   IdentityFile ${HOME}/.ssh/<ssh-key-priv-key>
+  PreferredAuthentications publickey
 
 
 # ---- Qemu/vm-kvm
