--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -16,11 +16,12 @@ jobs:
 
     steps:
       # Doc: https://github.com/marketplace/actions/checkout
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
       - name: Install deps, make & lint
         run: |
           apt update && apt install -y bash git make shellcheck vim curl
+          make help
           make dotfiles
         # shellcheck ~/.bashrc
         # shellcheck ~/.bash_profile
