--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -1,7 +1,4 @@
 name: ci-dotfiles
-
-# Doc: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
-
 on:
   push:
     tags:
@@ -9,18 +6,18 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
   ci-dotfiles:
     runs-on: ubuntu-latest
 
     steps:
-      # Doc: https://github.com/marketplace/actions/checkout
       - uses: actions/checkout@v6
 
       - name: Install deps, make & lint
+        env:
+          TERM: xterm
         run: |
-          apt update && apt install -y bash git make shellcheck vim curl
+          sudo apt update && sudo apt install -y bash git make shellcheck vim curl
           make help
           make dotfiles
         # shellcheck ~/.bashrc
