update: proxycommand for in ssh-config
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -25,7 +25,7 @@ Host vm-kvm-rocky-9
 HOST vm-vps-*
   User ali
   # --- Use Proxy, install connect-proxy
-  ProxyCommand          connect-proxy --socks-proxy-server 127.0.0.1:10808 %h %p
+  ProxyCommand nc --proxy-type socks5 --proxy 127.0.0.1:10808 %h %p
   ServerAliveInterval   10
   Port 2233
   # --- Jump Server
