update: ssh-config and bashrc for PATH
Signed-off-by: Ali Mehraji <a.mehraji75@gmail.com>

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -1,5 +1,13 @@
+Host *
+  PreferredAuthentications publickey
+
 Host github.com
   HostName ssh.github.com
+  User git
+  Port 443
+
+Host gitlab.com
+  Hostname altssh.gitlab.com
   User git
   Port 443
 
@@ -9,7 +17,6 @@ Host vm-*
   ControlPersist 10m
   # man 5 ssh_config
   IdentityFile ${HOME}/.ssh/<ssh-key-priv-key>
-  PreferredAuthentications publickey
 
 
 # ---- Qemu/vm-kvm
